@@ -1,4 +1,4 @@
-use Test::More tests => 3;
+use Test::More tests => 5;
 
 use warnings;
 use strict;
@@ -15,6 +15,19 @@ my $gfx = $pdf->page->gfx();
 $gfx->image($jpg, 72, 144, 216, 288);
 like($pdf->to_string(), qr/q 216 0 0 288 72 144 cm \S+ Do Q/,
      q{Add JPG to PDF});
+
+# Filehandle
+
+$pdf = PDF::API2->new();
+open my $fh, '<', 't/resources/1x1.jpg';
+$jpg = $pdf->image($fh);
+isa_ok($jpg, 'PDF::API2::Resource::XObject::Image::JPEG',
+       q{$pdf->image(filehandle)});
+
+is($jpg->width(), 1,
+   q{Image from filehandle has a width});
+
+close $fh;
 
 # Missing file
 
